# CPU-Scheduling-Algorithms

./: .editorconfig  .gitignore  LICENSE  test.cpp
qt_gui/: CMakeLists.txt  FCFS.cpp  FCFS.h  RoundRobin.cpp  SJF_preemptive.cpp  fcfs.cpp  fcfs.h  global_variables.cpp  global_variables.h  job_to_ready.cpp  job_to_ready.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  priority_nonpreemptive.cpp  priority_nonpreemptive.h  priority_preemptive.cpp  process.h  round_robin.cpp  round_robin.h  secondwindow.cpp  secondwindow.h  secondwindow.ui  sjf_nonpreemptive.cpp  sjf_nonpreemptive.h  sjf_preemptive.cpp  sjf_preemptive.h
schedulers/: prog
schedulers/header_files/: RoundRoubin.h  SJF_nonpreemptive.h  Sjf_Preemptive.h  global_variables.h  priority_nonpreemptive.h  process.h
schedulers/include/: fcfs.h  global_variables.h  priority_preemptive.h  process.h
schedulers/src/: FCFS.cpp  FCFS_Alg.c++  FCFS_Alg.cpp  RoundRobin.cpp  SJF-nonpreemptive.cpp  Sjf_Preemptive.cpp  fcfs.cpp  global_variables.cpp  job_to_ready.cpp  priority_nonpreemptive.cpp  priority_preemptive.cpp  round_robin.cpp  roundrobin.cpp  sjf-nonpreemptive.cpp  sjf_preemptive.cpp
